# v4l2-lib

./: .gitignore  CMakeLists.txt  Webcam.cpp  Webcam.hpp  capture-v4l2.c  capture-v4l2.h
